# nextaction-rs

./: Cargo.toml  Dockerfile  README.md  project.json
examples/: main.rs
functions/nextaction/: Cargo.toml  README.md  format.json  function.json
functions/nextaction/src/: errors.rs  lib.rs  protocol.rs
src/: error.rs  errors.rs  lib.rs  protocol.rs  rebuild_insert.rs
tests/: btree-order.rs  integration.rs  todoist-api.rs
