[package]
authors = ["Wu Young <doomsplayer@gmail.com>"]
name = "nextaction-rs"
version = "0.1.1"

[dependencies]
hyper = "0.10"
hyper-rustls = "0.3"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
log = "0.3"
env_logger = "0.4"
url = "1.4"
mime = "0.2"
uuid = { version = "0.4", features = ["serde", "v4"] }
error-chain = "0.10"
config = "0.4"

[lib]
name = "nextaction"
